# adaptive-swarm-crypto-thesis

./: .gitignore  Makefile  README.md  annotation.tex  latexmkrc  ref.bib  thesis.tex
benchmarks/: .dockerignore  README.md  docker-compose.yml  pyproject.toml
benchmarks/docker/: Dockerfile.bench
benchmarks/scenarios/: adversarial-uav.yaml  agriculture.yaml  dense-swarm.yaml  disaster-response.yaml  high-threat.yaml  lossy.yaml  low-energy.yaml  saturation-adaptive-long.yaml  saturation-adaptive.yaml  saturation-heavy.yaml  saturation-lightweight.yaml  stable-constrained.yaml  stable.yaml  stress-adaptive.yaml  stress-heavy.yaml  stress-lightweight.yaml  underwater.yaml
benchmarks/src/bench/: __init__.py  cli.py  config.py  crypto.py  crypto_work.py  energy.py  orchestrator.py  plots.py  policy.py  policy_tradeoff.py  proto_helpers.py  reporting.py  results.py  server.py  service.py
benchmarks/tests/: test_cli.py  test_compose_smoke.py  test_config.py  test_crypto.py  test_energy.py  test_orchestrator.py  test_policy.py  test_policy_tradeoff.py  test_reporting.py  test_results.py  test_service_integration.py
benchmarks/thesis-report-final/20260524-010231-saturation-adaptive-long-main-stability-static-heavy-25hz-cpu0p05-rekey2p0-clean-r1/: raw_metrics.json  summary.csv  summary.json
benchmarks/thesis-report-final/20260524-010401-saturation-adaptive-long-main-stability-static-heavy-25hz-cpu0p05-rekey2p0-clean-r2/: raw_metrics.json  summary.csv  summary.json
(+700 files in other folders)
