[project]
name = "diploma-bench"
version = "0.1.0"
description = "Benchmark suite for adaptive crypto peers used in the diploma project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "cryptography>=44.0.0",
  "docker>=7.1.0",
  "grpcio>=1.71.0",
  "grpcio-tools>=1.71.0",
  "matplotlib>=3.10.1",
  "pandas>=2.2.3",
  "protobuf>=5.29.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
]

[project.scripts]
bench = "bench.cli:main"
bench-peer = "bench.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-s"
markers = [
  "docker_smoke: docker-compose backed smoke tests",
]
